static/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

h1 {
    color: #04724d;
    font-size: 2.5em;
}

h2 {
    color: #04724d;
}

body {
    background-color: #f4f4f9;
}

.login{
    background-color: white;
    width: 40vh;
    border-radius: 20px;
    margin: auto;
    text-align: center;
    min-width: 40vh;
    padding: 10px;
}

h1, h2, label, p, button{
    font-family: Roboto, sans-serif;
    text-align: center;
}

input[type=text], input[type=password] {
    width: 20vh;
    border: 1px #586F7C solid;
    border-radius: 5px;
}

button {
    width: 5em;
    background-color: #04724d;
    color: white;
    border: 1px solid #586F7C;
    border-radius: 5px;
    font-size: 16px;
    padding: 5px;
    margin: 20px 5px;
}


.addreads, .reads, .addbook {
    margin: 20px;
    background-color: white;
    padding: 10px;
    border: 1px white solid;
    border-radius: 20px;
}

.addreads > form, .addbook > form {
    text-align: center;
}

table, td, th {
    font-family: "Noto Sans";
    text-align: center;
}

th {
    color: #04724d;
    margin: 2px;
    padding: 2px;
}

tr {
    justify-content: space-around;
}

table {
    margin: auto;
    border-collapse: collapse;
    border-spacing: 20px;
    width: 100%;
}

@media (max-width: 500px) {
    body {
        margin: 0;
        padding: 0;
        width: 100% !important;
        height: 100% !important;
        font-size: 20px;
        background-color: white;
    }

    .login{
        border: none;
    }

    body > * {
        margin: 5px;
    }

    label, input[type=text], input[type=password] {
        font-size: 20px !important;
    }

    button {
        font-size: 15px !important;
        border-radius: 5px;
    }
}

@media only screen and (min-width: 768px){
    .reads {
        float: right;
        width: 60%;
    }
    .addreads {
        float: left;
        width: 30%;
    }

    .reads, .addreads {
        padding: 20px;
    }

    .main {
        display: flex;
        justify-content: center;
    }
}

